# pointcloud-etfe-postprocessing

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
examples/: README.md  run_preview.py
notebooks/: Displacement_Calculation.ipynb  README.md  Strain_Distribution_Calculation.ipynb  Stress_Distribution_Calculation.ipynb
src/pointcloud_etfe_postprocessing/: __init__.py  cli.py  config.py  displacement.py  io.py  mesh.py  plotting.py  strain.py  stress.py  workflows.py
tests/: test_core.py
