[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointcloud-etfe-postprocessing"
version = "0.1.0"
description = "ETFE cushion photogrammetry point-cloud post-processing for displacement, strain, and stress distributions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "open3d>=0.18",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
pointcloud-etfe = "pointcloud_etfe_postprocessing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

